--- a/mcp/02-count-r/docker-compose.yml
+++ b/mcp/02-count-r/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - MCP_URL=${MCP_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - FASTMCP_API_KEY=${FASTMCP_API_KEY}
     command: ["python", "count_r_client.py"]
     depends_on:
       count-mcp-server:
