adding mcp labtests evaluating hugginface and langchain. Also init toon and prompt engineering evaluation

--- a/mcp/02-count-r/docker-compose.yml
+++ b/mcp/02-count-r/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - MCP_URL=${MCP_URL}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - FASTMCP_API_KEY=${FASTMCP_API_KEY}
+      - HF_API_TOKEN=${HUGGINGFACE_API_KEY}
     command: ["python", "count_r_client.py"]
     depends_on:
       count-mcp-server:
