--- a/mcp/02-count-r/requirements.txt
+++ b/mcp/02-count-r/requirements.txt
@@ -3,3 +3,8 @@ anyio>=4.0.0
 httpx>=0.27.0 
 mcp
 openai
+langchain>=0.3.27
+langchain-community==0.3.27
+langchain-huggingface==0.3.1
+transformers==4.55.2
+huggingface_hub==0.34.4
